--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@homebound/graphql-typescript-scalar-type-policies",
-  "version": "2.0.0-bump",
-  "main": "./build/index.js",
-  "types": "./build/",
+  "name": "@eonian/graphql-typescript-scalar-type-policies",
+  "version": "1.0.0",
+  "module": "dist/index.esm.min.js",
+  "browser": "dist/index.umd.min.js",
+  "main": "dist/index.cjs.min.js",
+  "type": "module",
   "scripts": {
-    "build": "rm -rf build; ./node_modules/.bin/tsc",
-    "prepare": "npm run build",
+    "build": "rollup --config",
     "test": "./node_modules/.bin/jest --watch",
     "coverage": "./node_modules/.bin/jest --collectCoverage",
     "format": "prettier --write 'src/**/*.{ts,js,tsx,jsx}'",
@@ -18,16 +19,13 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.11.8",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.1",
     "graphql": "^15.5.1",
-    "husky": "^3.0.9",
     "jest": "^27.0.6",
     "prettier": "^2.7.1",
+    "rollup": "^3.23.0",
     "ts-jest": "^27.0.4",
     "typescript": "^4.8.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run format"
-    }
   }
 }
