--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "skipLibCheck": true,
     "outDir": "dist",
     "moduleResolution": "node",
+    "declaration": true,
   },
   "includes": ["src"],
   "exclude":["integration"]
