--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "@eonian/graphql-typescript-scalar-type-policies",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
-  "type": "module",
   "scripts": {
     "build": "rm -rf ./dist && rollup --config",
     "test": "./node_modules/.bin/jest --watch",
     "coverage": "./node_modules/.bin/jest --collectCoverage",
-    "format": "prettier --write 'src/**/*.{ts,js,tsx,jsx}'",
-    "graphql-codegen": "rm integration/graphql-types.ts; graphql-codegen --config integration/graphql-codegen.yml"
+    "format": "prettier --write 'src/**/*.{ts,js,tsx,jsx}'"
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "^2.6.2",
